# clawphify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: ci.yml
clawphify/: __init__.py  __main__.py  export.py  hooks.py  ingest.py  manifest.py  serve.py  skill-claw.md  skill.md  watch.py  wiki.py
clawphify/data/: GRAPH_REPORT.md  __init__.py  openclaw_graph.json
